gen/cloudsearch/v1/cargo-errors.log
    Checking google-cloudsearch1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/cloudsearch/v1/lib)
error[E0308]: mismatched types
    --> cloudsearch/v1/lib/src/lib.rs:8868:25
     |
8866 |                     pub fn version(mut self, value: impl Into<Vec<u8>>) -> Self {
     |                                                                            ---- expected `resources::indexing::datasources::items::DeleteRequestBuilder<'a, A>` because of return type
8867 |                         let v: Vec<u8> = value.into();
8868 |                         self.version = Some(v.into())
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `resources::indexing::datasources::items::DeleteRequestBuilder`, found ()
     |
     = note: expected type `resources::indexing::datasources::items::DeleteRequestBuilder<'a, A>`
                found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `google-cloudsearch1`.

To learn more, run the command again with --verbose.
